# embedded_authentication

./: CMakeLists.txt  README.md
authentication/: CMakeLists.txt
authentication/includes/: authentication.hpp  authentication_errors.hpp  authentication_exceptions.hpp  session.hpp  session_manager.hpp  user.hpp  user_manager.hpp
authentication/sources/: authentication.cpp  session.cpp  session_manager.cpp  user.cpp  user_manager.cpp
serial_authentication/: CMakeLists.txt
serial_authentication/includes/: serial_authentication.hpp  serial_authentication_builder.hpp  serial_authentication_static.hpp
serial_authentication/sources/: serial_authentication.cpp  serial_authentication_builder.cpp  serial_operations.cpp  serial_read_operations.cpp  serial_write_operations.cpp
